--- a/Document/package.json
+++ b/Document/package.json
@@ -9,6 +9,7 @@
     "compression": "^1.7.4",
     "cookie-parser": "~1.4.4",
     "cookie-session": "^2.0.0",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "express-session": "^1.17.3",
